LIBSEARCH-81 Point search to ArchivesSpace Solr
This search runs a query agains the ArchivesSpace solr. It takes some of
the default params passed to Solr from the PUI.

https://issues.umd.edu/browse/LIBSEARCH-81

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -4,6 +4,7 @@
 # your installation.
 #
 # <NO_RESULTS_LINK>: The link for your site when there are no results
+# This is option and can be set in the search's configuration file.
 
 en:
   archives_space_search:
